--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <link
         rel="apple-touch-icon"
         sizes="180x180"
-        href="assets/icons/apple-touch-icon.png"
+        href="assets/apple-touch-icon.png"
         />  
         <link
         rel="icon"
         type="image/png"
         sizes="32x32"
-        href="assets/icons/favicon-32x32.png"
+        href="assets/favicon-32x32.png"
         />
 
         <!-- Animate CSS CDN -->
@@ -52,7 +52,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
       <img
-        src="GradPic.jpg"
+        src="assets/GradPic.jpg"
         alt="jane-doe"
         loading="lazy"
         class="hero-img"
