adding more info

--- a/index.html
+++ b/index.html
@@ -53,17 +53,13 @@
     <section class="hero" id="about">
       <img
         src="assets/GradPic.jpg"
-        alt="jane-doe"
         loading="lazy"
         class="hero-img"
       />
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
-          dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
-          inventore tempore minus nemo, iste ullam illo laboriosam maiores
-          repudiandae quos!
+          Final year science student majoring in Biomedical Science and Biophysics with a keen interest in bioinformatics, optical physics, biomedical imaging, and mathematical modelling of biological systems. Practical experience in Python, Matlab, HPC as well as working in a wet lab environment.
         </p>
       </div>
     </section>    
@@ -101,13 +97,21 @@
           <ion-icon name="beaker-outline"alt="expense-tracker"
           loading="lazy"
           class="project-pic"></ion-icon>
-          <h3 class="project-title">Expense Tracker</h3>
-          <p class="project-details">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-            ratione vel inventore labore commodi modi quos culpa aut saepe!
-            Alias!
-          </p>
-          <a href="#" target="_blank" class="project-link">Check it Out</a>
+          <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
+          <ul class="project-details">
+          <li>Investigated mechanisms of Haemophilus Influenzae response against allicin damage.</li>
+          <li>Used Python to create automated bioinformatic analysis pipelines.
+          </li>
+          <li>Analysed mass spectrometry proteomics data as well as RNA-seq transcriptomics data.
+          </li>
+          <li>
+          Accessed online databases such as Uniprot and NCBI through Python in order to annotate proteome and transcriptome.
+          </li>
+          <li>
+          Communicated findings through data visualisation.
+          </li>
+
+          </ul>
         </div>
 
       </div>
