--- a/index.html
+++ b/index.html
@@ -94,9 +94,7 @@
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
-          <ion-icon name="beaker-outline"alt="expense-tracker"
-          loading="lazy"
-          class="project-pic"></ion-icon>
+          <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a>
           <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
           <ul class="project-details">
           <li>Investigated mechanisms of Haemophilus Influenzae response against allicin damage.</li>
