--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         sizes="32x32"
         href="assets/favicon-32x32.png"
         />
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+        <link rel="shortcut icon" type="image/x-icon" href="assests/favicon.ico?">
 
 
         <!-- Animate CSS CDN -->
@@ -83,8 +83,8 @@
               <h2>Bioinformatics</h2>
             </div>
             <div class="skill">
-              <ion-icon name="logo-html5" loading="lazy"> </ion-icon> 
-              <h2>HTML</h2>
+              <ion-icon name="logo-electron" loading="lazy"> </ion-icon> 
+              <h2>Biophysics</h2>
             </div>
             <div class="skill">
               <ion-icon name="hardware-chip-outline" loading="lazy"></ion-icon>
