favicon fix pls

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         sizes="32x32"
         href="assets/favicon-32x32.png"
         />
-        <link rel="shortcut icon" type="image/x-icon" href="assests/favicon.ico?">
+        <link rel="icon" type="image/x-icon" href="assests/favicon.ico">
 
 
         <!-- Animate CSS CDN -->
