fixed flex boxes (maybe)

--- a/index.html
+++ b/index.html
@@ -53,17 +53,24 @@
 
     <!-- Hero Section -->
     <section class="hero" id="about">
+      <div class ="row">
+      <div class ="col">
       <img
         src="assets/GradPic.jpg"
         loading="lazy"
         class="hero-img"
+        id="hero-img"
       />
+    </div>
+    <div class ="col">
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
           Final year science student majoring in Biomedical Science and Biophysics with a keen interest in bioinformatics, optical physics, biomedical imaging, and mathematical modelling of biological systems. Practical experience in Python, Matlab, HPC as well as working in a wet lab environment.
         </p>
       </div>
+    </div>
+    </div> <!-- end row -->
     </section>    
 
     <section class="skills" id="skills">
