added padding to project

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
         <div class="project-container project-card">
-          <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a>
+          <div class="project-img">
+            <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a>
+          </div>
           <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
           <ul class="project-details">
           <li>Investigated mechanisms of Haemophilus Influenzae response against allicin damage.</li>
@@ -120,7 +122,6 @@
           <li>
           Communicated findings through data visualisation.
           </li>
-
           </ul>
         </div>
 
@@ -150,9 +151,13 @@
 
 
          
-      <a href="#" target="_blank"
+      <a href="https://github.com/TyeGonzalez" target="_blank"
         ><ion-icon name="logo-github" alt="Github" class="socicon"></ion-icon>
       </a>
+
+
+      <a href="mailto:gonzaleztye@gmail.com" target="_blank"
+        ><ion-icon name="mail" alt="Email" class="socicon"></ion-icon>
     </div> 
     
     <footer>
