--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
     <!-- Navbar -->
 
     <nav class="nav">
-      <h1>Tye Gonzalez</h1>
+      
+      <div class="title">
+        <a href="index.html">
+          <h1>Tye Gonzalez</h1>
+        </a>
+      </div>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
