--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Navbar -->
 
     <nav class="nav">
-      
+
       <div class="title">
         <a href="index.html">
           <h1>Tye Gonzalez</h1>
@@ -162,7 +162,7 @@
 
 
       <a href="mailto:gonzaleztye@gmail.com" target="_blank"
-        ><ion-icon name="mail" alt="Email" class="socicon"></ion-icon>
+        ><ion-icon name="mail" alt="Email" class="socicon"></ion-icon></a>
     </div> 
     
     <footer>
