--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         
         <div class="project-container project-card">
           <div class="project-img">
-            <a href = "https://alcohol-stock-market.web.app" class="alcohol-stock-market"> <img src="assets/stockmarket.png" class="image"> </a>
+            <a href = "https://drinkexchange.studio" class="alcohol-stock-market"> <img src="assets/stockmarket.png" class="image"> </a>
           </div>
           <h3 class="project-title">Stock Market Simulator</h3>
           <ul class="project-details">
@@ -126,7 +126,7 @@
 
         <div class="project-container project-card">
           <div class="project-img">
-            <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a>
+            <!-- <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a> -->
           </div>
           <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
           <ul class="project-details">
