Added new project

--- a/index.html
+++ b/index.html
@@ -110,7 +110,18 @@
     <section class="projects" id="projects">
       <h2 class="projects-title">Some of my Recent Projects</h2>
       <div class="projects-container">
-        
+        <div class="project-container project-card">
+          <div class="project-img">
+            <img src="assets/6CEI6.png" class="image"> 
+          </div>
+          <h3 class="project-title">Optimisation of Force Fields for NMR Structure determination</h3>
+          <ul class="project-details">
+          <li>Optimising Force Fields parameters calculated from the Automated Topology Builder 3.0 for use with NMR structure determination software</li>
+          <li>Assignment of homonuclear NMR spectra</li>
+          <li>Analysis of various protein and peptide structures</li>
+          </ul>
+        </div>
+
         <div class="project-container project-card">
           <div class="project-img">
             <a href = "https://drinkexchange.studio" class="alcohol-stock-market"> <img src="assets/stockmarket.png" class="image"> </a>
@@ -125,8 +136,10 @@
         </div>
 
         <div class="project-container project-card">
-          <div class="project-img">
-            <!-- <a href = "assets/Poster.pdf" class="poster"> <img src="assets/Poster.jpg" class="image"> </a> -->
+          <div class="project-img"><img src="assets/Hinf.jpg" class="image" id='bacteria'>
+            <img src="assets/Garlic.jpg" class="image" id='garlic'>
+            <a class="poster">  </a>
+            <a class="poster">  </a>
           </div>
           <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
           <ul class="project-details">
