--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Final year science student majoring in Biomedical Science and Biophysics with a keen interest in bioinformatics, optical physics, biomedical imaging, and mathematical modelling of biological systems. Practical experience in Python, Matlab, HPC as well as working in a wet lab environment.
+          Biophysics Honours graduate, currently working in peptide structural biology research. Currently, I serve as a Research Assistant, where I work on using solution NMR to elucidate structures of novel peptides while also developing and validating generalisable force fields for molecular dynamics simulations. My expertise also extends to the realm of coding in languages such as Python, Bash, JavaScript, and React. 
         </p>
       </div>
     </section>    
