Updated to new information.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
       <div class="bio animate__animated animate__shakeX">
         <h2 class="bio-title">About Me</h2>
         <p class="bio-text">
-          Biophysics Honours graduate, currently working in peptide structural biology research. Currently, I serve as a Research Assistant, where I work on using solution NMR to elucidate structures of novel peptides while also developing and validating generalisable force fields for molecular dynamics simulations. My expertise also extends to the realm of coding in languages such as Python, Bash, JavaScript, and React. 
-        </p>
+          <p>
+            First year PhD in Biophysics, my research is dedicated to advancing NMR and MD methodologies, particularly in peptide and protein structure, computational modeling, and drug design. Skilled in Python, Matlab, and High-Performance Computing (HPC), I combine computational techniques with a strong foundation in laboratory sciences to drive innovations in biophysical research and therapeutic development.
+          </p>
       </div>
     </section>    
 
@@ -124,7 +125,7 @@
 
         <div class="project-container project-card">
           <div class="project-img">
-            <a href = "https://drinkexchange.studio" class="alcohol-stock-market"> <img src="assets/stockmarket.png" class="image"> </a>
+            <a href = "https://alcohol-stock-market.web.app" class="alcohol-stock-market"> <img src="assets/stockmarket.png" class="image"> </a>
           </div>
           <h3 class="project-title">Stock Market Simulator</h3>
           <ul class="project-details">
@@ -135,25 +136,19 @@
           </ul>
         </div>
 
+        <!-- New Project -->
         <div class="project-container project-card">
-          <div class="project-img"><img src="assets/Hinf.jpg" class="image" id='bacteria'>
-            <img src="assets/Garlic.jpg" class="image" id='garlic'>
-            <a class="poster">  </a>
-            <a class="poster">  </a>
+          <div class="project-img">
+            <a href="https://dish-s-407402.web.app" class="dish-s">  
+            <img src="assets/ball_stick.png" class="image">
+          </a>
           </div>
-          <h3 class="project-title">Mechanisms of Haemophilus Influenzae Response Against Allicin Damage</h3>
+          <h3 class="project-title">Web Server for Prediction of Disulfide Dihedral Angles Using Chemical Shifts</h3>
           <ul class="project-details">
-          <li>Investigated mechanisms of Haemophilus Influenzae response against allicin damage.</li>
-          <li>Used Python to create automated bioinformatic analysis pipelines.
-          </li>
-          <li>Analysed mass spectrometry proteomics data as well as RNA-seq transcriptomics data.
-          </li>
-          <li>
-          Accessed online databases such as Uniprot and NCBI through Python in order to annotate proteome and transcriptome.
-          </li>
-          <li>
-          Communicated findings through data visualisation.
-          </li>
+            <li>Implemented Armstrong, Kaas, and Rosengren's paper into a web server</li>
+            <li>Developed using Python3, HTML, and Google Cloud Functions</li>
+            <li>Facilitates the prediction of disulfide dihedral angles from chemical shifts</li>
+            <li>Integrates advanced computational methods for protein structure analysis</li>
           </ul>
         </div>
 
