--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="hero" id="about">
 
       <img
-        src="assets/IMG_2164.jpeg"
+        src="assets/IMG_2164.jpg"
         class="hero-img"
         id="hero-img"
       />
