--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+        <script src="scripts.js"></script>
        
         <link rel="stylesheet" href="style1.css">
         <!-- Favicons -->
@@ -156,6 +156,8 @@
     </section>
 
 
+
+
     <!-- Socials -->
 
     <div class="socials">
@@ -213,6 +215,7 @@
       src="scripts.js"
     ></script>
 
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <script
       nomodule
