--- a/dipolar-coupling.html
+++ b/dipolar-coupling.html
@@ -44,6 +44,7 @@
     <p>
       Use the slider to change the dipole's orientation. Use the checkboxes to toggle each surface.
     </p>
+    <p> What is the legendre polynomial? <a href="legendre.html">Click here to find out!</a></p>
   </div>
 
   <script type="module">
