--- a/mas.html
+++ b/mas.html
@@ -61,6 +61,7 @@
       <p>
         Use your mouse to rotate and zoom the scene.
       </p>
+      <p>Why is the magic angle 54.7°? <a href="dipolar-coupling.html">Click here to learn more</a> </p>
     </div>
 
     <!-- Controls Panel -->
