--- a/index.html
+++ b/index.html
@@ -196,6 +196,20 @@
             <li>Provides insight into matrix operations in a geometric context</li>
           </ul>
         </div>
+        <!-- New Project Card: Bluetooth Smart Ring Page Scrolling -->
+        <div class="project-container project-card">
+          <div class="project-img">
+            <a href="https://github.com/TyeGonzalez/ColmiR02RingScroll" class="bluetooth-scrolling">
+              <img src="assets/IMG_0722.png" class="image">
+            </a>
+          </div>
+          <h3 class="project-title">Bluetooth Smart Ring Page Scrolling</h3>
+          <ul class="project-details">
+            <li>Uses accelerometer data to map ring rotation to page scrolling</li>
+            <li>Integrates Bluetooth communication</li>
+            <li>Python-driven processing for responsive scrolling effects</li>
+          </ul>
+        </div>
 
       </div>
     </section>
